--- a/index.html
+++ b/index.html
@@ -11,7 +11,53 @@
     <title> </title>
   </head>
   <body>
-    <h1> </h1>
+ 
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+  <a class="navbar-brand" href="http://angelesdeayuda.com" target="_blank"><img src="images/Logo_Angeles.png" alt="Logo Angeles de Ayuda"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Features</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner text-center">
+    <div class="carousel-item active">
+      <img class="w-50" src="images/huespedes/Meche.jpg" alt="First slide" width="50px">
+    </div>
+    <div class="carousel-item">
+      <img class="w-50" src="images/huespedes/Amparo.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="w-50" src="images/huespedes/Juan.jpg" alt="Third slide">
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+ 
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
