Add the container with the image and the form

--- a/index.html
+++ b/index.html
@@ -4,14 +4,70 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="estilos.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title> </title>
   </head>
   <body>
-    <h1> </h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+        <img class="img-form" src="https://ae01.alicdn.com/kf/HTB12A6pQXXXXXXIXVXXq6xXFXXXZ/Brand-New-Diansheng-D-ugi-Ceg-y-Case-3x3x3-Cube-Magia-Staro-ytny-Pok-j-Ryby.jpg_640x640.jpg" class="rounded float-left" alt="...">
+
+        </div>
+        <div class="col-md-4 col-sm-12">
+          <form class="form1">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Nombre</label>
+              <input type="name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter name">
+              <small id="emailHelp" class="form-text text-muted">Nombre completo con mayusculas</small>
+            </div>
+            <div class="form-group">
+             <label for="exampleInputEmail1">Email </label>
+             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <small id="emailHelp" class="form-text text-muted">No compartiremos tu email</small>
+           </div>
+           <div class="form-group">
+             <label for="exampleInputPassword1">Password</label>
+             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          </div>
+          <div class="form-group form-check">
+           <input type="checkbox" class="form-check-input" id="exampleCheck1">
+           <label class="form-check-label" for="exampleCheck1">Check me out</label>
+          </div>
+         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Submit</button>
+         <!-- The Modal -->
+        <div class="modal fade" id="myModal">
+         <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+
+       <!-- Modal Header -->
+       <div class="modal-header">
+         <h4 class="modal-title">¡Felicidades!</h4>
+         <button type="button" class="close" data-dismiss="modal">&times;</button>
+       </div>
+
+       <!-- Modal body -->
+       <div class="modal-body">
+         Ya estas registrado
+       </div>
+
+       <!-- Modal footer -->
+       <div class="modal-footer">
+         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+       </div>
+
+       </form>
+
+
+     </div>
+   </div>
+ </div>
+</div>
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
